--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 16/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 169 points<br>
+Unlocked 16/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 173 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -34,6 +34,7 @@ Unlocked 16/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Seamstress (Level 2)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Apprentice Seamstress (Level 3)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -62,16 +63,16 @@ Unlocked 16/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3144 status
-   2676 symbolic-ref
-    194 add
-    162 diff
-    160 commit
+   3441 status
+   2939 symbolic-ref
+    210 add
+    176 commit
+    175 diff
      85 checkout
-     40 mv
+     52 mv
      19 svn
+     17 rm
      17 branch
-     16 rm
      15 reset
      15 push
      12 rebase
@@ -83,10 +84,11 @@ Git commands sorted by usage:
       5 fetch
       4 merge
       4 config
+      3 reflog
+      3 log
+      3 help
       2 Wed
       2 Thu
-      2 reflog
-      2 log
       1 show
       1 Mon
       1 init
