--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 201 points<br>
+Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 207 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -65,33 +65,34 @@ Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Traveler (Level 4)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
+<li><div class="title">Traveler (Level 5)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4070 status
-   3457 symbolic-ref
-    252 add
-    216 diff
+   4269 status
+   3614 symbolic-ref
+    253 add
+    218 diff
     207 commit
-     87 checkout
+     98 checkout
      52 mv
-     24 rm
-     22 svn
-     19 branch
-     17 stash
+     32 svn
+     29 stash
+     25 rm
+     20 branch
      16 reset
      16 push
-     13 rebase
+     15 rebase
      11 achievements
       8 tag
       6 remote
       6 clone
       5 merge
       5 fetch
+      4 reflog
       4 log
       4 config
-      3 reflog
       3 help
       2 Wed
       2 Thu
