--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 19/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 227 points<br>
+Unlocked 19/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 232 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -63,6 +63,7 @@ Unlocked 19/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 296 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -75,11 +76,11 @@ Unlocked 19/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4744 status
-   4017 symbolic-ref
-    287 add
-    244 diff
-    239 commit
+   4776 status
+   4044 symbolic-ref
+    290 add
+    250 diff
+    241 commit
     132 checkout
      53 mv
      51 svn
@@ -90,9 +91,9 @@ Git commands sorted by usage:
      19 rebase
      18 reset
      11 achievements
+      9 help
       8 tag
       8 log
-      8 help
       7 remote
       7 fetch
       6 merge
@@ -103,6 +104,7 @@ Git commands sorted by usage:
       2 Thu
       2 show
       2 init
+      1 submodule
       1 Mon
       1 gc
       1 blame
